added class for simple link list styling

--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,3 +1,5 @@
-<% @years.each do |year| -%>
-	<%= content_tag( 'p', link_to( year, calendar_year_url( :year => year ) ) ) %>
-<% end -%>
+<ol class="unnumbered link-list">
+	<% @years.each do |year| -%>
+		<%= content_tag( 'li', link_to( year, calendar_year_url( :year => year ) ) ) %>
+	<% end -%>
+</ol>
