--- a/app/views/code_comment/index.html.erb
+++ b/app/views/code_comment/index.html.erb
@@ -1,10 +1,10 @@
-<ul>
+<ul class="link-list">
 	<%= content_tag( 'li', link_to( 'Monkey patched date class', code_comment_date_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Main calculator controller', code_comment_calculation_controller_url ) ) %>
 </ul>
 
 <%= content_tag( 'h2', 'Scrutiny end date calculators' ) %>
-<ul>
+<ul class="link-list">
 	<%= content_tag( 'li', link_to( 'Calculation for bicameral instruments with both Houses sitting', code_comment_bicameral_both_houses_sitting_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for bicameral SIs with either House sitting', code_comment_bicameral_either_house_sitting_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', code_comment_commons_only_sis_url ) ) %>
@@ -14,7 +14,7 @@
 </ul>
 
 <%= content_tag( 'h2', 'Scrutiny start date calculators' ) %>
-<ul>
+<ul class="link-list">
 	<%= content_tag( 'li', link_to( 'Calculation for bicameral instruments with both Houses sitting', code_comment_bicameral_both_houses_sitting_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for bicameral SIs with either House sitting', code_comment_bicameral_either_house_sitting_reverse_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Calculation for Commons only SIs', code_comment_commons_only_sis_reverse_url ) ) %>
