--- a/app/views/calculator/index.html.erb
+++ b/app/views/calculator/index.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="link-list">
 	<%= content_tag( 'li', link_to( 'Scrutiny end date calculator', calculator_form_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Scrutiny start date calculator', reverse_calculator_form_url ) ) %>
 	<%= content_tag( 'li', link_to( 'Sitting days during an interval calculator', calculator_interval_url ) ) %>
