--- a/app/views/house_days/adjournment_day_list.html.erb
+++ b/app/views/house_days/adjournment_day_list.html.erb
@@ -1,3 +1,3 @@
-<ol class="unnumbered">
+<ol class="unnumbered link-list">
 	<%= render :partial => 'adjournment_day/adjournment_day', :collection => @house.adjournment_days %>
 </ol>
