--- a/app/views/meta/index.html.erb
+++ b/app/views/meta/index.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="link-list">
 	<li><%= link_to( 'MacOS application', meta_app_url )  %></li>
 	<li><%= link_to( 'Calculation code comments', code_comment_list_url )  %></li>
 	<li><%= link_to( 'Database schema [PNG]', meta_schema_url ) %></li>
