--- a/app/views/meta/librarian_tools/index.html.erb
+++ b/app/views/meta/librarian_tools/index.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="link-list">
 	<li><%= link_to( 'How to populate the calendars', meta_calendar_sync_url ) %></li>
 	<li><%= link_to( 'What to do at prorogation and dissolution', meta_prorogation_dissolution_url ) %></li>
 	<li><%= link_to( 'Calculation style calculator', calculator_style_form_url ) %></li>
