--- a/app/views/parliamentary_time/index.html.erb
+++ b/app/views/parliamentary_time/index.html.erb
@@ -4,7 +4,7 @@
 
 
 	<%= content_tag( 'h2', 'Bicameral time periods' ) %>
-	<ul>
+	<ul class="link-list">
 		<%= content_tag( 'li', link_to( 'Parliament periods', parliament_list_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Dissolution periods', dissolution_period_list_url ) ) %>
 		<%= content_tag( 'li', link_to( 'Sessions', session_list_url ) ) %>
@@ -12,7 +12,7 @@
 	</ul>
 
 	<%= content_tag( 'h2', 'House specific time periods' ) %>
-	<ul>
+	<ul class="link-list">
 		<%= render :partial => 'house/house', :collection => @houses %>
 	</ul>
 </div>
