application template now calls local footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,6 @@
 				<%= yield %>
 			</div>
 		</main>
-		<%= render 'library_design/footer/fat_footer' %>
+		<%= render 'layouts/footer/footer' %>
 	</body>
 </html>
